# reaper-levitanus

./: .gitignore  Cargo.toml  FFMPEG_SPLIT_PLAN.md  README.md  body.md  reaper-levitanus.sublime-workspace
.github/workflows/: Release.yml  build_and_test.yml  build_linux.yml  build_macos.yml  build_windows.yml  rust.yml
front/: Cargo.toml
front/src/: main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
reaper-levitanus/: Cargo.toml  encoders.json  filters.json  muxers.json
reaper-levitanus/src/: envelope_snap.rs  ffmpeg.rs  ffmpeg_new.rs  gui.rs  lib.rs  normalization.rs  otio_export.rs
reaper-levitanus/src/ffmpeg/: base.rs  base_types.rs  filters.rs  gui.rs  mod.rs  nodes.rs  old_base.rs  options.rs  parser.rs  stream_ids.rs
reaper-levitanus/src/ffmpeg/gui/: filters_widget.rs  mod.rs  render_settings.rs  render_widget.rs  small_widgets.rs
reaper-levitanus/src/ffmpeg_new/: mod.rs  render.rs  render_targets.rs
reaper-levitanus/src/sample_editor/: mod.rs
reaper-levitanus/src/sample_editor/gui/: mod.rs
reaper-levitanus/tests/: filters_parcing.rs
test/: Cargo.toml
test/src/: lib.rs
