[workspace]
members = ["reaper-levitanus", "test", "plugin"]

[workspace.dependencies]
# rea-rs = {git = "https://github.com/Levitanus/rea-rs"}
rea-rs = {version = "0.1.3", path = "../rea-rs-workspace/rea-rs"}
rea-rs-low = {version = "0.1.3", path = "../rea-rs-workspace/low"}
rea-rs-macros = "0.1.2"
rea-rs-test = {version = "0.1.3", path = "../rea-rs-workspace/rea-rs-test"}
reaper-imgui = {version = "0.1.3", path = "../reaper-imgui/reaper-imgui"}

derivative = "2.2"
env_logger = "0.10"
fraction = {version="0.15", features=["with-serde-support"]}
itertools = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
regex = "1.10"
lazy_static = "1.4"
dyn-clone = "1.0"
strum = {version="0.26", features=["derive"]}

tempfile = "3.0"

custom_error = "1.9"
thiserror = "1.0"

musical-note = {version = "0.1", path = "../musical-note"}
