[workspace]
members = ["reaper-levitanus", "test", "plugin"]

[workspace.dependencies]
# rea-rs = {git = "https://github.com/Levitanus/rea-rs"}
rea-rs = {version = "0.1.3", path = "../rea-rs-workspace/rea-rs"}
rea-rs-low = {version = "0.1.3", path = "../rea-rs-workspace/low"}
rea-rs-macros = {version = "0.1.3", path = "../rea-rs-workspace/macros"}
rea-rs-test = {version = "0.1.3", path = "../rea-rs-workspace/rea-rs-test"}
reaper-imgui = {path = "../reaper-imgui/reaper-imgui"}

derivative = "2.2"
env_logger = "0.10"
fraction = {version="0.15", features=["with-serde-support"]}
itertools = "0.10"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
path-absolutize = "3.1.1"
dyn-clone = "1.0"
strum = {version="0.26", features=["derive"]}
autopilot = "0.4.0"

tempfile = "3.0"

custom_error = "1.9"
thiserror = "1.0"
