[package]
edition = "2021"
name = "reaper_levitanus-plugin"
publish = false
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
rea-rs-low = {workspace = true}
rea-rs-macros = {workspace = true}

env_logger = {workspace = true}
log = {workspace = true}

serde = {workspace = true}

fraction = {workspace = true}
# thiserror = {workspace = true}

reaper-levitanus = {path = "../reaper-levitanus"}

[lib]
crate-type = ["cdylib"]
name = "reaper_levitanus_plugin"
