[package]
edition = "2021"
name = "reaper-levitanus"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
rea-rs-low = {workspace = true}
rea-rs-macros = {workspace = true}

env_logger = {workspace = true}
log = {workspace = true}

fraction = {workspace = true, features=["with-serde-support"]}
itertools = {workspace = true}
open = "3.2.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}
path-absolutize = {workspace = true}
dyn-clone = {workspace = true}
strum = {workspace = true, features=["derive"]}
autopilot = {workspace = true}

uuid = "1.8.0"
ws = "0.9.2"
egui = "0.27.2"
eframe = "0.27.2"
url = "2.5.0"
int-enum = "1.1.2"

[lib]
crate-type = ["lib"]
name = "reaper_levitanus"
