[package]
edition = "2021"
name = "reaper-levitanus"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
rea-rs-low = {workspace = true}
rea-rs-macros = {workspace = true}

env_logger = {workspace = true}
log = {workspace = true}

fraction = {workspace = true, features=["with-serde-support"]}
itertools = {workspace = true}
open = "3.2.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
regex = {workspace = true}
lazy_static = {workspace = true}
path-absolutize = {workspace = true}
dyn-clone = {workspace = true}
strum = {workspace = true, features=["derive"]}
autopilot = {workspace = true}

uuid = "1.8.0"
url = "2.5.0"
int-enum = "1.1.2"

egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    # "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",
] }

[lib]
crate-type = ["lib"]
name = "reaper_levitanus"
